Knob of a disabled or readonly range control should not be draggable. https://bugs.webkit.org/show_bug.cgi?id=54820

Patch by Shinya Kawanaka <shinyak@google.com> on 2011-07-27
Reviewed by Kent Tamura.

Source/WebCore:

Made disabled or readonly range control undraggable.

Test: fast/forms/range-drag.html

* html/RangeInputType.cpp:
(WebCore::RangeInputType::handleMouseDownEvent):
  Added check that the element is readonly or disabled.
* html/shadow/SliderThumbElement.cpp:
(WebCore::SliderThumbElement::defaultEventHandler): ditto.

LayoutTests:

Added tests to confirm disabled or readonly range control is undraggable.

* fast/forms/range-drag-expected.txt: Added.
* fast/forms/range-drag.html: Added.

Canonical link: https://commits.webkit.org/80994@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91827 268f45cc-cd09-0410-ab3c-d52691b4dbfc